[package]
name = "pokemon"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
select = "0.4"
scraper = "0.11"
serde_json = "1.0"
itertools = "0.8"

serde = { version = "1.0", features = ["derive"] }